--- a/kmeans.ipynb
+++ b/kmeans.ipynb
@@ -341,7 +341,7 @@
         "\n",
         "plt.xlabel(f'{iris.feature_names[2]}')\n",
         "plt.ylabel(f'{iris.feature_names[3]}')\n",
-        "plt.title('Visualização dos Dados Iris (3 Classes) - pontos médios')\n",
+        "plt.title('Visualização dos Dados Iris (3 Classes) - pontos selecionados')\n",
         "plt.legend()\n",
         "plt.show()"
       ],
