--- a/Case_Kinea/Case_Kinea_Nicolas_Cenedesi.ipynb
+++ b/Case_Kinea/Case_Kinea_Nicolas_Cenedesi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGS2pM2zdMrcdUvzQRuIFk",
+      "authorship_tag": "ABX9TyM1TZn/ll41kt92qdvUzdBD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,7 +118,24 @@
         "\n",
         "As variáveis secundárias seriam aquelas dependentes das variáveis primárias antes definidas.\n",
         "Em um cenario geral, as taxas convencionais sao definidas anualmente, porém, para um fluxo de caixa semestral, como o que ocorre na compra de um NTN-B com juros semestral, devemos realizar a conversao das três taxas: IPCA, taxa real, taxa de cupom para periodo semestral.\n",
-        "Além disso, devemos definir uma quarta variavel secundária, chamada de Taxa Nominal de Desconto Semestral (Fórmula de Fisher)"
+        "Além disso, devemos definir uma quarta variavel secundária, chamada de Taxa Nominal de Desconto Semestral (Fórmula de Fisher)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Variáveis Secundárias (Derivadas no Código)\n",
+        "\n",
+        "As variáveis secundárias são aquelas dependentes das variáveis primárias (inputs) e são calculadas internamente pelo modelo para ajustar as taxas ao período semestral e encontrar a taxa de desconto correta.\n",
+        "\n",
+        "Em um cenário geral, as taxas convencionais são definidas anualmente. No entanto, para um fluxo de caixa semestral, como o que ocorre na NTN-B, devemos realizar a conversão das três taxas primárias: $\\pi$ (IPCA), $r$ (Taxa Real), e $c$ (Taxa de Cupom).\n",
+        "\n",
+        "| Variável | Símbolo no Cálculo | Descrição | Fórmula Base |\n",
+        "| :--- | :---: | :--- | :---: |\n",
+        "| **Períodos Totais** | $N$ | Número total de pagamentos (semestres) até o vencimento. | $N = T \\times 2$ |\n",
+        "| **Inflação Semestral** | $\\pi_{sem}$ | A inflação projetada ($\\pi$) convertida para o período de capitalização semestral. | $\\pi_{sem} = (1 + \\pi)^{1/2} - 1$ |\n",
+        "| **Taxa Real Semestral** | $r_{sem}$ | A taxa real exigida ($r$) convertida para o período de capitalização semestral. | $r_{sem} = (1 + r)^{1/2} - 1$ |\n",
+        "| **Taxa Cupom Semestral** | $c_{sem}$ | A taxa de cupom anual ($c$) convertida para a taxa de pagamento semestral. | $c_{sem} = (1 + c)^{1/2} - 1$ |\n",
+        "| **Taxa Nominal de Desconto** | $i_{nom}$ | A **Taxa de Desconto (Custo de Oportunidade)**. Combina o retorno real e a inflação (Fórmula de Fisher). | $i_{nom} = (1 + r_{sem})(1 + \\pi_{sem}) - 1$ |"
       ],
       "metadata": {
         "id": "354_IeAXh0M4"
